--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=23)
+NewWindowPosition=(X=685,Y=28)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -92,15 +92,15 @@ CurrentRotGridSize=6
 MRUItem0=/Game/Levels/Tutorial1
 MRUItem1=/Game/Levels/Level1
 MRUItem2=/Game/Levels/JoeLevel1
-MRUItem3=/Game/Levels/TylerLevel3
-MRUItem4=/Game/Levels/TylerLevel1
-MRUItem5=/Game/Levels/Tutorial3
-MRUItem6=/Game/Levels/Tutorial2
-MRUItem7=/Game/Levels/Level5
-MRUItem8=/Game/Levels/Level4
-MRUItem9=/Game/Levels/Level3
-MRUItem10=/Game/Levels/Level2
-MRUItem11=/Game/Levels/JoeLevel3
+MRUItem3=/Game/Levels/JoeLevel2
+MRUItem4=/Game/Levels/Level3
+MRUItem5=/Game/Levels/Level4
+MRUItem6=/Game/Levels/Level2
+MRUItem7=/Game/Levels/MainMenu
+MRUItem8=/Game/Levels/BaseLevel
+MRUItem9=/Game/Levels/JoeLevel3
+MRUItem10=/Game/Levels/TylerLevel3
+MRUItem11=/Game/Levels/TylerLevel1
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -160,16 +160,13 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Tutorial1
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Widgets/PauseWidget.PauseWidget
-OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
-OpenAssetsAtExit=/Game/Blueprints/Widgets/HUDWidget.HUDWidget
+CleanShutdown=True
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1964,7 +1961,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Particles.InstanceParameters\" "
 SceneComponent="\"Object.Particles.InstanceParameters\" "
 ActorComponent="\"Object.Particles.InstanceParameters\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -2163,7 +2160,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Tyler/Documents/GitHub/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
+UNR=../../../../../../Users/Games/Desktop/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
@@ -2725,8 +2722,8 @@ StaticMeshEditor.TimeStamp=2017.09.26-10.10.47
 StaticMeshEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2017.10.01-15.07.42
 TextureEditor.LastCompileMethod=Unknown
-UATHelper.TimeStamp=2017.09.26-13.41.11
-UATHelper.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2017.10.02-12.55.16
+UATHelper.LastCompileMethod=External
 Cascade.TimeStamp=2017.10.01-15.07.25
 Cascade.LastCompileMethod=External
 DistCurveEditor.TimeStamp=2017.10.01-15.07.28
