--- a/Development/Unreal Project/Saved/Config/Windows/Engine.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/Engine.ini
@@ -17,12 +17,10 @@ TunnelMulticastEndpoint=
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+ANTPath=(Path="")
+JavaPath=(Path="")
 
 
