--- a/Development/Unreal Project/Saved/Config/Windows/Game.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/Game.ini
@@ -1,4 +1,7 @@
 [StartupActions]
 bAddPacks=False
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="C:/Users/Games/Desktop/mgp-mgp-group-11/Windows Build")
+
 
