Fixed laser pointer, changed levels 1 and 3

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,17 +90,17 @@ CurrentRotGridSize=6
 
 [MRU]
 MRUItem0=/Game/Levels/Tutorial1
-MRUItem1=/Game/Levels/Level1
-MRUItem2=/Game/Levels/JoeLevel1
-MRUItem3=/Game/Levels/JoeLevel2
-MRUItem4=/Game/Levels/Level3
-MRUItem5=/Game/Levels/Level4
-MRUItem6=/Game/Levels/Level2
-MRUItem7=/Game/Levels/MainMenu
-MRUItem8=/Game/Levels/BaseLevel
-MRUItem9=/Game/Levels/JoeLevel3
-MRUItem10=/Game/Levels/TylerLevel3
-MRUItem11=/Game/Levels/TylerLevel1
+MRUItem1=/Game/Levels/TylerLevel3
+MRUItem2=/Game/Levels/Tutorial3
+MRUItem3=/Game/Levels/Level1
+MRUItem4=/Game/Levels/JoeLevel1
+MRUItem5=/Game/Levels/JoeLevel2
+MRUItem6=/Game/Levels/Level3
+MRUItem7=/Game/Levels/Level4
+MRUItem8=/Game/Levels/Level2
+MRUItem9=/Game/Levels/MainMenu
+MRUItem10=/Game/Levels/BaseLevel
+MRUItem11=/Game/Levels/JoeLevel3
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -166,7 +166,8 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 LastLevel=/Game/Levels/Tutorial1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -2102,6 +2103,10 @@ ParticleModuleBeamModifier="\"Object.Position.Position\" \"Object.Position.Posit
 PauseWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted1.TileWallSlanted1;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
 RecentlyPlaced=/Game/Particles/LaserPointerParticle.LaserPointerParticle;
 RecentlyPlaced=/Game/Particles/CannonLaserPointer.CannonLaserPointer;
 RecentlyPlaced=/Game/Textures/MainMenuPictures/LargeMenuBackground_Sprite.LargeMenuBackground_Sprite;
@@ -2115,13 +2120,9 @@ RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSlantCorner.TileTriangleSlantCorner;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted2.TileWallSlanted2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted1.TileWallSlanted1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.Physics=False
