Changed corners of some levels to fit player score in properly.

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Tutorial1
-MRUItem1=/Game/Levels/TylerLevel3
-MRUItem2=/Game/Levels/Tutorial3
-MRUItem3=/Game/Levels/Level1
-MRUItem4=/Game/Levels/JoeLevel1
-MRUItem5=/Game/Levels/JoeLevel2
-MRUItem6=/Game/Levels/Level3
-MRUItem7=/Game/Levels/Level4
-MRUItem8=/Game/Levels/Level2
-MRUItem9=/Game/Levels/MainMenu
-MRUItem10=/Game/Levels/BaseLevel
-MRUItem11=/Game/Levels/JoeLevel3
+MRUItem0=/Game/Levels/TylerLevel3
+MRUItem1=/Game/Levels/JoeLevel3
+MRUItem2=/Game/Levels/Level1
+MRUItem3=/Game/Levels/JoeLevel1
+MRUItem4=/Game/Levels/BaseLevel
+MRUItem5=/Game/Levels/Tutorial1
+MRUItem6=/Game/Levels/Tutorial2
+MRUItem7=/Game/Levels/Tutorial3
+MRUItem8=/Game/Levels/TylerLevel1
+MRUItem9=/Game/Levels/Level5
+MRUItem10=/Game/Levels/JoeLevel2
+MRUItem11=/Game/Levels/Level3
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -163,11 +163,10 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/Tutorial1
+LastLevel=/Game/Levels/TylerLevel3
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
+CleanShutdown=True
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
