--- a/Development/Unreal Project/Config/DefaultEngine.ini
+++ b/Development/Unreal Project/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BounceGamemode.BounceGamemode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Blueprints/SettingsInstance.SettingsInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
